tests/paczka1/small_fuzzy/53779640.err
Error in line 2: 2ZKQEUKsMVO S757 72,5
Error in line 3: kPK A955 59,8
Error in line 5: kPK A452 24,1
Error in line 9: kPK A410 49,3
Error in line 12: rNiMdErihw A452 55,3
